# ZipsWirelessRadio

./: .gitignore  .gitmodules  README.md
include/: Options.h  WiFiClient.h  WiFiController.h  WiFiServer.h  ZipsWireless.h  lwipopts.h
src/: buildscript.sh
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  dhcpserver.c  server.cpp
